--- a/UnityProject/PandaTree/Assembly-CSharp.csproj
+++ b/UnityProject/PandaTree/Assembly-CSharp.csproj
@@ -58,7 +58,8 @@
      <Compile Include="Assets\Scripts\Inventory\Item.cs" />
      <Compile Include="Assets\Scripts\Inventory\Leaf.cs" />
      <Compile Include="Assets\Scripts\Inventory\NonEatable.cs" />
-     <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
+     <Compile Include="Assets\Scripts\Player\MoveScript.cs" />
+     <Compile Include="Assets\Scripts\Player\TouchController.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
