--- a/UnityProject/PandaTree/Assembly-CSharp.csproj
+++ b/UnityProject/PandaTree/Assembly-CSharp.csproj
@@ -54,10 +54,11 @@
      <Compile Include="Assets\Scripts\GameHandler.cs" />
      <Compile Include="Assets\Scripts\Inventory\Apple.cs" />
      <Compile Include="Assets\Scripts\Inventory\Banana.cs" />
-     <Compile Include="Assets\Scripts\Inventory\Eatable.cs" />
+     <Compile Include="Assets\Scripts\Inventory\Edible.cs" />
      <Compile Include="Assets\Scripts\Inventory\Item.cs" />
      <Compile Include="Assets\Scripts\Inventory\Leaf.cs" />
-     <Compile Include="Assets\Scripts\Inventory\NonEatable.cs" />
+     <Compile Include="Assets\Scripts\Inventory\NonEdible.cs" />
+     <Compile Include="Assets\Scripts\Player\MainPlayerScript.cs" />
      <Compile Include="Assets\Scripts\Player\MoveScript.cs" />
      <Compile Include="Assets\Scripts\Player\TouchController.cs" />
  <Reference Include="UnityEngine.UI">
